# parallel_reader

./: Cargo.toml  README.md
.github/workflows/: cargo-test.yml
examples/: content_hash.rs  demo.rs
src/: lib.rs
